# Real-Time-Edge-Detection-Viewer

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/karthik/edgedemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/karthik/edgedemo/: Camera1Helper.kt  GLRenderer.kt  GLTextureView.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/karthik/edgedemo/: ExampleUnitTest.kt
gl/: gl_renderer.cpp  gl_renderer.h  shaders.glsl
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt  edge_detector.cpp  edge_detector.h  native-lib.cpp
web/: index.html  package-lock.json  package.json  server.js  tsconfig.json
web/src/: index.ts
